{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 27,
  "lineage": "79fc815a-0923-d91f-d29f-b00fe1d1c079",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040982755449:internet-gateway/igw-0d9f8e775d45d87d0",
            "id": "igw-0d9f8e775d45d87d0",
            "owner_id": "040982755449",
            "tags": {
              "Environment": "Development",
              "IaC": "Terraform",
              "Name": "marketpulse-igw",
              "Owner": "Intern B",
              "Project": "MarketPulse"
            },
            "tags_all": {
              "Environment": "Development",
              "IaC": "Terraform",
              "Name": "marketpulse-igw",
              "Owner": "Intern B",
              "Project": "MarketPulse"
            },
            "vpc_id": "vpc-068c381f7ea7aa406"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040982755449:route-table/rtb-0211c94bf2a17e88d",
            "id": "rtb-0211c94bf2a17e88d",
            "owner_id": "040982755449",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9f8e775d45d87d0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Development",
              "IaC": "Terraform",
              "Name": "marketpulse-public-rt",
              "Owner": "Intern B",
              "Project": "MarketPulse"
            },
            "tags_all": {
              "Environment": "Development",
              "IaC": "Terraform",
              "Name": "marketpulse-public-rt",
              "Owner": "Intern B",
              "Project": "MarketPulse"
            },
            "timeouts": null,
            "vpc_id": "vpc-068c381f7ea7aa406"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3b107154bbb19f0",
            "route_table_id": "rtb-0211c94bf2a17e88d",
            "subnet_id": "subnet-0e1d1b7eb9fcbe5aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "airflow_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040982755449:security-group/sg-02e6a25d9c4f41c81",
            "description": "Security group for Airflow VM Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e6a25d9c4f41c81",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Airflow Web UI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MLflow Web UI",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "marketpulse-airflow-sg",
            "name_prefix": "",
            "owner_id": "040982755449",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "IaC": "Terraform",
              "Owner": "Intern B",
              "Project": "MarketPulse"
            },
            "tags_all": {
              "Environment": "Development",
              "IaC": "Terraform",
              "Owner": "Intern B",
              "Project": "MarketPulse"
            },
            "timeouts": null,
            "vpc_id": "vpc-068c381f7ea7aa406"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040982755449:subnet/subnet-0e1d1b7eb9fcbe5aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1d1b7eb9fcbe5aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040982755449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Development",
              "IaC": "Terraform",
              "Name": "marketpulse-public-subnet",
              "Owner": "Intern B",
              "Project": "MarketPulse"
            },
            "tags_all": {
              "Environment": "Development",
              "IaC": "Terraform",
              "Name": "marketpulse-public-subnet",
              "Owner": "Intern B",
              "Project": "MarketPulse"
            },
            "vpc_id": "vpc-068c381f7ea7aa406"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:040982755449:vpc/vpc-068c381f7ea7aa406",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-013e0151177e9632a",
            "default_route_table_id": "rtb-01ced39a90425a042",
            "default_security_group_id": "sg-0d8c718a2298bfc14",
            "dhcp_options_id": "dopt-03b9061db40344c05",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-068c381f7ea7aa406",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ced39a90425a042",
            "owner_id": "040982755449",
            "tags": {
              "Environment": "Development",
              "IaC": "Terraform",
              "Name": "marketpulse-vpc",
              "Owner": "Intern B",
              "Project": "MarketPulse"
            },
            "tags_all": {
              "Environment": "Development",
              "IaC": "Terraform",
              "Name": "marketpulse-vpc",
              "Owner": "Intern B",
              "Project": "MarketPulse"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}